--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<p>&nbsp;</p>
 	<strong>Слайд 4:</strong>
 	<p>Карта мира: <a href="https://studopedia.ru/30_1293_test-transportnaya-sistema-mira.html">https://studopedia.ru/30_1293_test-transportnaya-sistema-mira.html</a></p>
-	<p>Рабочий:<a href="https://kak-eto-sdelano.ru/kak-vyrashhivayut-koshenil-dlya-izgotovleniya-karmina/">https://kak-eto-sdelano.ru/kak-vyrashhivayut-koshenil-dlya-izgotovleniya-karmina/</a></p>
+	<p>Рабочий: <a href="https://kak-eto-sdelano.ru/kak-vyrashhivayut-koshenil-dlya-izgotovleniya-karmina/">https://kak-eto-sdelano.ru/kak-vyrashhivayut-koshenil-dlya-izgotovleniya-karmina/</a></p>
 	<p>&nbsp;</p>
 	<strong>Слайд 5:</strong>
 	<p>Выкраска: <a href="https://ru.pinterest.com/pin/111112315779853449/">https://ru.pinterest.com/pin/111112315779853449/</a></p>   
@@ -27,7 +27,7 @@
 	<p>Клетки под микроскопом: <a href="https://100-bal.ru/himiya/179752/index.html>https://100-bal.ru/himiya/179752/index.html</a></p>
 	<p>Ткани: <a href="https://pixabay.com/ru/photos/красный-ткань-текстиль-текстура-5608819/">https://pixabay.com/ru/photos/красный-ткань-текстиль-текстура-5608819/</a></p>
 	<p>Косметика: <a href="https://pbs.twimg.com/media/EWwkWMXWoAE2wbg?format=jpg&name=medium">https://pbs.twimg.com/media/EWwkWMXWoAE2wbg?format=jpg&name=medium</a></p>
-	<p>Краска: <a href="https://max.kg/item/2967411/guash-hudozhestvennaya-banka-220-ml-karmin-gamma">https://max.kg/item/2967411/guash-hudozhestvennaya-banka-220-ml-karmin-gamma</a></p>
+	<p>Акриловая краска: <a href="https://max.kg/item/2967411/guash-hudozhestvennaya-banka-220-ml-karmin-gamma">https://max.kg/item/2967411/guash-hudozhestvennaya-banka-220-ml-karmin-gamma</a></p>
 	<p>Колбасы: <a href="https://rare-gallery.com/845366-meat-products-sausage-vienna-sausage-tomatoes-sliced-.html">https://rare-gallery.com/845366-meat-products-sausage-vienna-sausage-tomatoes-sliced-.html</a></p>
 	<p>Конфеты: <a href="https://www.keywordbaskets.com/cmVkIGNhbmR5IGJ1ZmZldA/">https://www.keywordbaskets.com/cmVkIGNhbmR5IGJ1ZmZldA/</a></p>
 
