--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<p>Выкраска: <a href="https://ru.pinterest.com/pin/111112315779853449/">https://ru.pinterest.com/pin/111112315779853449/</a></p>   
 	<p>&nbsp;</p>
 	<strong>Слайд 6:</strong>
-	<p>Клетки под микроскопом: <a href="https://100-bal.ru/himiya/179752/index.html>https://100-bal.ru/himiya/179752/index.html</a></p>
+	<p>Клетки под микроскопом: <a href="https://100-bal.ru/himiya/179752/index.html">https://100-bal.ru/himiya/179752/index.html</a></p>
 	<p>Ткани: <a href="https://pixabay.com/ru/photos/красный-ткань-текстиль-текстура-5608819/">https://pixabay.com/ru/photos/красный-ткань-текстиль-текстура-5608819/</a></p>
 	<p>Косметика: <a href="https://pbs.twimg.com/media/EWwkWMXWoAE2wbg?format=jpg&name=medium">https://pbs.twimg.com/media/EWwkWMXWoAE2wbg?format=jpg&name=medium</a></p>
 	<p>Акриловая краска: <a href="https://max.kg/item/2967411/guash-hudozhestvennaya-banka-220-ml-karmin-gamma">https://max.kg/item/2967411/guash-hudozhestvennaya-banka-220-ml-karmin-gamma</a></p>
